--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Next.js Notion Starter Kit",
-  "short_name": "Starter Kit",
+  "name": "Guisong Fu",
+  "short_name": "Guisnog Fu",
   "icons": [
     {
       "src": "/favicon.png",
